--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,7 @@ variables:
 
 before_script:
   - 'which ssh-agent || (apt-get update -y && apt-get install openssh-client -y)'
+  - which ssh-agent
   - eval $(ssh-agent -s)
   - cat "./.gitlab-ci/id_rsa" | tr -d '\r' | ssh-add -
   - mkdir -p ~/.ssh
