--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,8 +13,18 @@ before_script:
   - git submodule update --init --recursive
 
 stages:
+  - build_chisel
   - build
   - test
+
+chisel:
+  stage: build_chisel
+  image: chisel
+  script:
+    - ./build_chisel.sh
+  artifacts:
+    paths: thinpad_top.srcs/sources_1/new/Router.v
+
 
 bitstream:
   stage: build
