--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,7 +23,8 @@ chisel:
   script:
     - ./build_chisel.sh
   artifacts:
-    paths: thinpad_top.srcs/sources_1/new/Router.v
+    paths:
+      - thinpad_top.srcs/sources_1/new/Router.v
 
 
 bitstream:
